Fix for hiding the home page when it's too small
Really should have saw that one...

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -40,7 +40,7 @@ body {
 }
 
 @media (max-width: 900px) {
-  #profile-info {
+  #profile-info-sidebar {
     display: none;
   }
   
